<resources>
    <string name="app_name">条码追溯系统</string>
    <string name="property">© 版权所有：正业玖坤</string>
    <string name="exp_network_exception">网络连接异常，请检查您的网络状态</string>
    <string name="exp_network_timeout">网络连接超时，请检查您的网络状态，稍后重试</string>
    <string name="exp_json_error">数据解析错误</string>
    <string name="exp_server_timeout">服务器连接超时</string>
    <string name="user_log_tip">用户登录</string>
    <string name="login_login">立即登录</string>
    <string name="login_inpiut_psw">请输入密码</string>
    <string name="login_input_username">请输入用户名</string>
    <string name="login_app_name">智能仓库管理系统</string>
    <string name="login_remember_psw">记录密码</string>
    <string name="login_success">登录成功</string>
    <string name="language_simple">简体</string>
    <string name="language_tradtional">繁体</string>
    <string name="language_english">英文</string>
    <string name="login_select_language">请选择语言</string>
    <string name="login_success_tip">提示：首次登录需进行个人信息确认，如有问题，请到ERP中进行修改。</string>
    <string name="name">姓名：%1$s</string>
    <string name="sex">性别：%1$s</string>
    <string name="work_num">工号：%1$s</string>
    <string name="depart">部门：%1$s</string>
    <string name="tel">手机：%1$s</string>
    <string name="confirm">确定</string>
    <string name="set_userinfo_num">编号：%1$s</string>
    <string name="set_userinfo_name">姓名：%1$s</string>
    <string name="set_userinfo_sex">性别：%1$s</string>
    <string name="set_userinfo_tel">手机：%1$s</string>
    <string name="set_userinfo_from">所属组织：%1$s</string>
    <string name="set_userinfo_depart">部门：%1$s</string>
    <string name="set_userinfo_root">权限组织：%1$s</string>
    <string name="login_url_tip">地址：</string>
    <string name="login_zuhu">租户：</string>
    <string name="login_language">语言：</string>
    <string name="login_set">配置服务</string>
    <string name="login_please_input_serverurl">请输入服务地址</string>
    <string name="login_please_input_right_serverurl">请输入正确地址</string>
    <string name="login_confirm_set">设置</string>
    <string name="login_please_input_zuhu">请输入租户信息</string>
    <string name="set_language">选择语言</string>
    <string name="set_exit">退出登录</string>
    <string name="set_update_version">版本更新</string>
    <string name="set_about">关于软件</string>
    <string name="set_update_psw">修改密码</string>
    <string name="set_device_info">设备信息</string>
    <string name="set_userinfo">用户信息</string>
    <string name="server_set">服务设置</string>
    <string name="set_team">组织切换</string>
    <string name="go_login">去登录</string>
    <string name="is_new_version">已是最新版本，无需更新</string>
    <string name="deviceinfo">设备信息</string>
    <string name="set_deviceinfo_num">设备编号：</string>
    <string name="please_input_device_num">请输入设备编号</string>
    <string name="set_deviceinfo_mac">设备MAC：%1$s</string>
    <string name="set_deviceinfo_ip">IP地址：%1$s</string>
    <string name="comfirm_set">确认设置</string>
    <string name="update_password">更改密码</string>
    <string name="set_pda_code_success">设置PDA参数成功！</string>
    <string name="update_password_oldpsw">原密码：</string>
    <string name="please_input_old_psw">请输入原密码</string>
    <string name="update_password_newpsw">新密码：</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="upadte_password_repeat">再一次密码：</string>
    <string name="please_repeat_input_password">请再次输入新密码</string>
    <string name="show_password">显示密码</string>
    <string name="about">\t\t条码追溯系统，利用条码技术，赋给产品电子标签、对物料进行条码识别、工艺作业自动记录等信息化技术手段，来进行防错、监控、实时分析和追踪等，实现产品生产的防错、精益生产和管理，极大地提高了生产效益和产品质量，大大地提高了客户的满意度。</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="logout">退出登录</string>
    <string name="reset_server_will_logout">重新配置服务将退出登录</string>
    <string name="delete">删除</string>
    <string name="update">修改</string>
    <string name="change_password_tip">密码修改成功，请重新登录！</string>
    <string name="twice_password_no_same">两次填写的密码不一致！</string>
    <string name="home_process_select">工序选择</string>
    <string name="aplly_material">供料上料</string>
    <string name="inject_mold">注塑过站</string>
    <string name="home_title">条码追溯系统</string>
    <string name="btn_commit">提交</string>
    <string name="error_title">错误提示</string>
    <string name="dialog_batch_tip">有更早批次的物料可以进行清点, 点击确定进行提交！</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>
    <string name="isloading">正在加载</string>
    <string name="home_set">设置</string>
    <string name="home_mine">我的</string>
    <string name="none">无</string>
    <string name="title_process_select">工序选择</string>
    <string name="commit_success">提交成功</string>
    <string name="no_process">暂无工序</string>
    <string name="no_process_no_commit">暂无工序，不能提交！</string>
    <string name="process_list">工序列表</string>
    <string name="user_not_select_process">用户尚未选择工序，请选择工序！</string>
    <string name="title_add_material">供料上料</string>
    <string name="no_worker_order_info">暂无工位信息</string>
    <string name="scan_point_title">此单号系统中未找到，请确认后，再进行查询！</string>
    <string name="process_code">工序代码</string>
    <string name="worker_position">工位</string>
    <string name="product_line">产线代码</string>
    <string name="worker_ordeer">工单</string>
    <string name="product_code">产品代码</string>
    <string name="inject_machine">注塑机</string>
    <string name="supply_material_machine">供料机</string>
    <string name="tip_please_select_process">请先选择工序再进行此操作！</string>
    <string name="input_inject_machine">请输入/扫描上注塑机</string>
    <string name="tip_no_inject_machine_info">暂无注塑机信息</string>
    <string name="tip_no_supply_material_machine_info">暂无供料机信息</string>
    <string name="tip_no_mocode_info">暂无工单信息</string>
    <string name="tip_add_material_barcode_check_success">上料条码校验成功,可以进行提交！</string>
    <string name="tip_scan">扫码提示</string>
    <string name="tip_add_material_barcode_no_same_order">当前上料条码与单号不一致，是否强制提交？</string>
    <string name="tip_inject_machine_not_alive">您输入/扫描注塑机不存在！</string>
    <string name="input_scan_device">输入/扫描设备</string>
    <string name="input_material_barcode">请输入/扫描物料条码</string>
    <string name="process">工序</string>
    <string name="input_scan_supply_machine">请输入/扫描供料机</string>
    <string name="tip_input_scan_supply_not_live">您输入/扫描供料机不存在！</string>
    <string name="title_inject_mold_pass">注塑过站</string>
    <string name="input_add_material_code">请输入/扫描上料单号</string>
    <string name="input_product_code">请输入/扫描产品序列号</string>
    <string name="input_no_low_four">产品序列号的长度不能小于4</string>
    <string name="tip_no_mould_info">暂无模具信息</string>
    <string name="tip_inject_pass_success">注塑过站提交成功！</string>
    <string name="tip_check_success">校验成功！</string>
    <string name="tip_please_select_bad_code">由于您选择了不良品，请选择不良代码进行提交！</string>
    <string name="input_bad_code">请输入/选择不良代码</string>
    <string name="mould">模具</string>
    <string name="quality">品质</string>
    <string name="good_quality">良品</string>
    <string name="bad_quality">不良品</string>
    <string name="product_num">产品序列号</string>
    <string name="bad_code">不良代码</string>
    <string name="bad_code_group">不良代码组</string>
    <string name="remark">备注</string>
    <string name="input_remark_info">请输入备注信息</string>
    <string name="input_scan_mold">请输入/扫描模具</string>
    <string name="tip_mold_no_live">您输入/扫描模具不存在！</string>
    <string name="input_cnc_tongs">请输入/扫描CNC夹具</string>
    <string name="title_cnc">CNC</string>
    <string name="cnc_fixture">CNC夹具</string>
    <string name="work_order_code">工单代码</string>
    <string name="product_name">产品名称</string>
    <string name="product_standard">规格型号</string>
    <string name="tip_no_cnc_info">暂无CNC设备信息</string>
    <string name="input_cnc_device">请输入/扫描CNC设备</string>
    <string name="tip_no_cnc_device">您输入/扫描的CNC设备不存在！</string>
    <string name="cnc_device">CNC设备</string>
    <string name="title_polish">抛光</string>
    <string name="tip_no_polish_info">暂无抛光机信息</string>
    <string name="polish_device">抛光设备</string>
    <string name="tip_bad_code_have_selected">您选择的不良代码已经选中，请重新选择！</string>
    <string name="tip_set_servise_address">请先配置服务地址</string>
    <string name="tip_username">请输入用户名</string>
    <string name="tip_password">请输入密码</string>
    <string name="input_polish_device">请输入/扫描抛光设备</string>
    <string name="tip_no_polish_device">您输入的抛光设备不存在！</string>
    <string name="input_batch_no">请输入/生成批次号</string>
    <string name="input_serial_no">请输入/扫描序列号</string>
    <string name="quality_batch_no">抽检批号</string>
    <string name="create_batch_no">生成批号</string>
    <string name="quality_name">质检名称</string>
    <string name="quality_dsc">质检描述</string>
    <string name="process_name">工序名称</string>
    <string name="time_frame_code">时段代码</string>
    <string name="time_frame_name">时段名称</string>
    <string name="plan_date">计划日期</string>
    <string name="actual_sample">实际样本</string>
    <string name="pass_sample">合格样本</string>
    <string name="unpass_sample">不合格样本</string>
    <string name="product_status">状态</string>
    <string name="batch_pass">批通过</string>
    <string name="batch_return">批退</string>
    <string name="title_appearance_quality">外观抽检</string>
    <string name="tip_select_timeframe_low">当前操作时间不能小于您所选的时间段!</string>
    <string name="tip_create_batch_no_success">生成批号成功！</string>
    <string name="tip_product_serial_check_success">产品序列号校验成功！</string>
    <string name="tip_save_check_result_success">保存检验结果成功！</string>
    <string name="tip_select_bad_code">您检验项目结果为不良，请选择不良代码！</string>
    <string name="tip_complete_checkitems">请先完成检验项目！</string>
    <string name="tip_all_checkiten_have_complete">所有检验项目已完成！</string>
    <string name="title_product_result">产品检验</string>
    <string name="next">下一项</string>
    <string name="quality_total">抽检总数</string>
    <string name="count_quality_total">计算抽检总数</string>
    <string name="tip_bad_code_no_alive">您输入/扫描的不良代码不存在！</string>
    <string name="complete">完成</string>
    <string name="tip_forced_update">当前更新为强制更新，请安装最新版本！</string>
    <string name="tip_version_update">版本更新</string>
    <string name="user_have_select">用户已选择</string>
    <string name="tip_no_inject_process">当前工序不是注塑工序，请先选择工序</string>
    <string name="process_inject">MD</string>
    <string name="tip_no_polish_process">当前工序不是抛光工序，请先选择工序！</string>
    <string name="process_polish">PRL</string>
    <string name="process_cnc1">CNC1</string>
    <string name="process_cnc2">CNC2</string>
    <string name="tip_no_cnc_process1">当前工序不是CNC1工序，请先选择工序！</string>
    <string name="tip_no_cnc_process2">当前工序不是CNC2工序，请先选择工序！</string>
    <string name="process_paint">SP</string>
    <string name="tip_no_paint">当前工序不是喷漆工序，请先选择工序</string>
    <string name="diluent">稀释剂条码</string>
    <string name="input_diluent_barcode">请输入/扫描稀释剂条码</string>
    <string name="paint_barcode">喷漆条码</string>
    <string name="input_paint_code">请输入/扫描喷漆条码</string>
    <string name="title_paint">喷漆上料</string>
    <string name="input_piant">请输入/扫描喷漆设备</string>
    <string name="tip_no_paint_device">您输入/扫描的喷漆设备不存在！</string>
    <string name="paint_device">喷漆设备</string>
    <string name="title_check_record">抽检记录</string>
    <string name="tip_no_time">暂无时段</string>
    <string name="input_batch_no_quality">请输入/扫描批次号</string>
    <string name="query_tip">查询提示</string>
    <string name="tip_no_check_record">未查询到相关抽检记录！</string>
    <string name="pass">合格</string>
    <string name="unpass">不合格</string>
    <string name="start_dat">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="time_period_process"><![CDATA[时段&工序]]></string>
    <string name="time_period">时段</string>
    <string name="batchno">批次</string>
    <string name="batch_no">批次号</string>
    <string name="query">查询</string>
    <string name="date">日期</string>
    <string name="result">结果</string>
    <string name="status">状态：</string>
    <string name="please_select">请选择</string>
    <string name="device_type">设备类型</string>
    <string name="title_select_device">选择设备</string>
    <string name="tip_select_device_type">请选择设备类型！</string>
    <string name="count_pass_qty">过站计数器：</string>
</resources>