<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".mvp.ipqc.record.IpqcRecordActivity">

    <include layout="@layout/title_head"/>

    <LinearLayout
        android:paddingLeft="10px"
        android:paddingRight="10px"
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/process"
            android:textColor="@color/color_333"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/color_333"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time_period"
            android:textColor="@color/color_333"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/batchno"
            android:textColor="@color/color_333"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="@color/color_333"
            android:textSize="13sp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rlv_ipqc_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>